--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -48,10 +48,10 @@ jobs:
       uses: docker/setup-buildx-action@v2
 
     - name: Log in to Docker Hub
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build and push Docker images
       uses: docker/bake-action@v2.3.0
@@ -73,26 +73,29 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Log in to Docker Hub
-      uses: docker/login-action@v1
+      uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Install sshpass
-      run: sudo apt-get install sshpass
+    - name: Deploy SSH key
+      run: echo "${{ secrets.DROPLET_SSH_KEY }}" > /dev/shm/do && chmod 600 /dev/shm/do
 
     - name: Copy compose.yml to droplet
-      run: sshpass -v -p '${{ secrets.DROPLET_PASSWORD }}' scp -o StrictHostKeyChecking=no compose.yml root@${{ vars.DROPLET_IP }}:~
+      run: scp -i /dev/shm/do -o StrictHostKeyChecking=no compose.yml root@${{ vars.DROPLET_IP }}:~
 
     - name: Deploy
       uses: appleboy/ssh-action@master
       with:
         host: ${{ vars.DROPLET_IP }}
         username: root
-        password: ${{ secrets.DROPLET_PASSWORD }}
+        key: ${{ secrets.DROPLET_SSH_KEY }}
         script: |
           cd ~
           export AUTH_SERVICE_IP=${{ vars.DROPLET_IP }}
           docker compose down
           docker compose pull
           docker compose up -d
+
+    - name: Purge SSH key
+      run: shred -zu -n1 /dev/shm/do
