--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -20,3 +20,4 @@ validator = "0.16.1"
 fake = "=2.3.0"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
+reqwest = { version = "0.11.26", default-features = false, features = ["json", "cookies"] }
