--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 async-trait = "0.1.78"
 axum = "0.7.4"
+axum-extra = { version = "0.9.2", features = ["cookie"] }
 reqwest = { version = "0.11.26", default-features = false, features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
