--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -10,7 +10,9 @@ async-trait = "0.1.78"
 axum = "0.7.4"
 axum-extra = { version = "0.9.2", features = ["cookie"] }
 chrono = "0.4.35"
+dotenvy = "0.15.7"
 jsonwebtoken = "9.2.0"
+lazy_static = "1.4.0"
 reqwest = { version = "0.11.26", default-features = false, features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
