--- a/compose.yml
+++ b/compose.yml
@@ -1,3 +1,4 @@
+version: "3.9"
 services:
   app-service:
     image: ergonomic7912/app-service # specify name of image on Docker Hub
@@ -12,5 +13,7 @@ services:
   auth-service:
     image: ergonomic7912/auth-service
     restart: "always" # automatically restart container when server crashes
+    environment: # set up environment variables
+      JWT_SECRET: ${JWT_SECRET} # use the JWT_SECRET environment variable from the host machine
     ports:
       - "3000:3000" # expose port 3000 so that applications outside the container can connect to it 
