--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -17,7 +17,7 @@ reqwest = { version = "0.11.26", default-features = false, features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.36", features = ["full"] }
-tower-http = { version = "0.5.0", features = ["fs"] }
+tower-http = { version = "0.5.0", features = ["fs", "cors"] }
 uuid = { version = "1.7.0", features = ["v4", "serde"] }
 validator = "0.16.1"
 
